--- a/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
+++ b/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-066-011-4">Norbu Samphel </author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-066-011"/>
                 <date/>
             </publicationStmt>
@@ -61,6 +61,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-12T10:44:43.3Z" type="text-version" status="0.0.6" xml:id="UT22084-066-011-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T12:07:00.099Z" type="translation-status" status="2.g" xml:id="UT22084-066-011-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T12:07:00.099Z" type="text-version" status="0.0.7" xml:id="UT22084-066-011-15">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
