--- a/translations/kangyur/placeholders/037-005_toh44-43-chapter_43_the_teaching_on_the_emergence_of_the_tathagata.xml
+++ b/translations/kangyur/placeholders/037-005_toh44-43-chapter_43_the_teaching_on_the_emergence_of_the_tathagata.xml
@@ -17,12 +17,12 @@
                 <sponsor xml:id="UT22084-037-005-6"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-037-005"/>
                 <date/>
             </publicationStmt>
@@ -44,6 +44,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-037-005-8">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T13:50:55.734Z" type="translation-status" status="2.h" xml:id="UT22084-037-005-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T13:50:55.734Z" type="text-version" status="0.0.4" xml:id="UT22084-037-005-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
