--- a/translations/kangyur/placeholders/037-005_toh44-43-chapter_43_the_teaching_on_the_emergence_of_the_tathagata.xml
+++ b/translations/kangyur/placeholders/037-005_toh44-43-chapter_43_the_teaching_on_the_emergence_of_the_tathagata.xml
@@ -9,20 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa skye 'byung bstan pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="en">The Teaching on the Emergence of the Tathāgata</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《指示如來現生經》</title>
-                <author role="translatorMain" xml:id="UT22084-037-005-1"/>
+                <author role="translatorMain" xml:id="UT22084-037-005-1">Padmakara Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-037-005-2">Sangseraima Ujeed</author>
-                <author role="translatorEng" xml:id="UT22084-037-005-3">Dr. John Canti</author>
-                <author role="translatorEng" xml:id="UT22084-037-005-4">Patrick Carré</author>
-                <consultant role="projectManager" xml:id="UT22084-037-005-5">Dr. John Canti</consultant>
+                <consultant role="projectManager" xml:id="UT22084-037-005-5">John Canti</consultant>
                 <sponsor xml:id="UT22084-037-005-6"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-037-005"/>
                 <date/>
             </publicationStmt>
@@ -49,6 +47,15 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-23T13:50:55.734Z" type="text-version" status="0.0.4" xml:id="UT22084-037-005-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T13:52:10.699Z" type="text-version" status="0.0.5" xml:id="UT22084-037-005-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T13:53:03.371Z" type="translation-status" status="2.g" xml:id="UT22084-037-005-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T13:53:03.371Z" type="text-version" status="0.0.6" xml:id="UT22084-037-005-13">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
