--- a/translations/kangyur/placeholders/083-023_toh475-the_tantra_of_red_yamari.xml
+++ b/translations/kangyur/placeholders/083-023_toh475-the_tantra_of_red_yamari.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-083-023-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-083-023"/>
                 <date/>
             </publicationStmt>
@@ -45,6 +45,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-083-023-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T15:04:50.022Z" type="translation-status" status="2.h" xml:id="UT22084-083-023-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-23T15:04:50.022Z" type="text-version" status="0.0.4" xml:id="UT22084-083-023-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
