--- a/translations/kangyur/translations/072-029_toh329-the_devata_sutra.xml
+++ b/translations/kangyur/translations/072-029_toh329-the_devata_sutra.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-029-233">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -165,6 +165,9 @@
                 </change>
                 <change who="#sameer" when="2024-01-08T10:49:33.463Z" type="text-version" status="1.0.3" xml:id="UT22084-072-029-240">
                     <desc>Included in App v 3.10</desc>
+                </change>
+                <change who="#konchog" when="2024-05-24T15:46:36.379Z" type="text-version" status="1.0.4" xml:id="UT22084-072-029-241">
+                    <desc>A couple small fixes in the intro.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -342,10 +345,11 @@
                                         <milestone unit="chunk" xml:id="UT22084-072-029-75"/>
                                         <p tid="18">One exchange in particular from the sūtra
                                                 continues to be well known and frequently quoted: </p>
-                                        <p tid="19">“The divine being asked:</p>
+                                        <q>
+                        <p tid="19">“The divine being asked:</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-029-77"/>
                                         <lg tid="20">
-                                                <l>‘What is attractive but not beneficial,</l>
+                                                <l>“ ‘What is attractive but not beneficial,</l>
                                                 <l>And what is beneficial but not attractive?</l>
                                                 <l>What is a harmful disease,</l>
                                                 <l>And who, the supreme physician?’</l>
@@ -353,12 +357,13 @@
                                         <p tid="21">“The Blessed One replied:</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-029-79"/>
                                         <lg tid="22">
-                                                <l>‘Lust is attractive but not beneficial,</l>
+                                                <l>“ ‘Lust is attractive but not beneficial,</l>
                                                 <l>And liberation is beneficial but not
                                                   attractive.</l>
                                                 <l>Attachment is a harmful disease,</l>
                                                 <l>And the Buddha is the supreme physician.’ ”</l>
                                         </lg>
+                    </q>
                                         <milestone unit="chunk" xml:id="UT22084-072-029-80"/>
                                         <p tid="23">An early English translation of the sūtra from
                                                 Chinese was published by Carus (1894). This English
