--- a/translations/kangyur/placeholders/085-003_toh483-the_tantra_purifying_evil_destinies.xml
+++ b/translations/kangyur/placeholders/085-003_toh483-the_tantra_purifying_evil_destinies.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-085-003-2">Kris Anderson</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-085-003"/>
                 <date/>
             </publicationStmt>
@@ -69,6 +69,12 @@
                 </change>
                 <change who="#cabie-sim" when="2024-01-30T12:52:16.734Z" type="text-version" status="0.0.9" xml:id="UT22084-085-003-13">
                     <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-27T14:05:02.065Z" type="translation-status" status="2.h" xml:id="UT22084-085-003-14">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-27T14:05:02.065Z" type="text-version" status="0.0.10" xml:id="UT22084-085-003-15">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
