--- a/translations/kangyur/translations/072-029_toh329-the_devata_sutra.xml
+++ b/translations/kangyur/translations/072-029_toh329-the_devata_sutra.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-029-233">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -168,6 +168,9 @@
                 </change>
                 <change who="#konchog" when="2024-05-24T15:46:36.379Z" type="text-version" status="1.0.4" xml:id="UT22084-072-029-241">
                     <desc>A couple small fixes in the intro.</desc>
+                </change>
+                <change who="#konchog" when="2024-05-27T22:21:56.673Z" type="text-version" status="1.0.5" xml:id="UT22084-072-029-242">
+                    <desc>Several fixes in the main translation.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -395,17 +398,17 @@
                                                   two hundred and fifty monks.” Bhikṣuṇī Vinītā
                                                   2010, pp. 262–4. This is not found in the Gilgit
                                                   Sanskrit manuscript. </note> One night, shortly
-                                                before waking,<note place="end" xml:id="UT22084-072-029-88"> D: <title xml:lang="Bo-Ltn">mi nyal tsam</title>. Pelliot
+                                                before the waking hour,<note place="end" xml:id="UT22084-072-029-88"> D: <title xml:lang="Bo-Ltn">mi nyal tsam</title>. Pelliot
                                                   tibétain 732: <foreign xml:lang="Bo-Ltn" type="quote">nam nangs pa dang</foreign>, Skt.
                                                   <foreign xml:lang="Sa-Ltn" type="quote">atikrāntāyāṃ rātrau</foreign>. Bhikṣuṇī Vinītā
-                                                  2010, p.267: “when the night was far gone”; also
+                                                  2010, p. 267: “when the night was far gone”; also
                                                   notes “in the 2nd or 3rd watch.” </note> a
                                                 beautiful divine being came before the Blessed One,
                                                 paid homage by bowing its head to the feet of the
                                                 Blessed One, and sat down to one side. By the power
                                                 of that divine being, the whole of Jetavana was
                                                 suffused with a great light. </p>
-                                        <p tid="33">At that time, the divine being inquired with the
+                                        <p tid="33">At that time, the divine being made an inquiry with the
                                                 following verses:<note place="end" xml:id="UT22084-072-029-90"> In the Stok Palace
                                                   version, each verse of questions from the divine
                                                   being (<foreign xml:lang="Bo-Ltn" type="term">lha</foreign>) is prefaced with the vocative
@@ -618,7 +621,7 @@
                                                         <foreign xml:lang="Bo-Ltn">sbyin pa</foreign> (Skt. <foreign xml:lang="Sa-Ltn">dāna</foreign>).
                                                 </note> 
                                                         
-                                                        friends are increased;</l>
+                                                        friends are increased,</l>
                                                 <l>And through love, enemies are pacified.</l>
                                                 <l>Through ethical discipline, higher realms are
                                                   attained,</l>
@@ -738,7 +741,7 @@
                                         </lg>
                                         <milestone unit="chunk" xml:id="UT22084-072-029-151"/>
                                         <p tid="83">After the Blessed One had spoken thus, the
-                                                divine being rejoiced. He paid homage by bowing its
+                                                divine being rejoiced. It paid homage by bowing its
                                                 head at the feet of the Blessed One, rejoiced, and
                                                 disappeared. </p>
                                         <milestone unit="chunk" xml:id="UT22084-072-029-152"/>
