--- a/translations/kangyur/translations/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
+++ b/translations/kangyur/translations/066-017_toh259-the_sutra_on_the_quintessence_that_illuminates_the_basket_without_words.xml
@@ -29,7 +29,7 @@
         <editor role="finalReviewer" xml:id="UT22084-066-017-257">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.11 <date>2024</date>
+                <edition>v 1.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -214,6 +214,9 @@
                 <change who="#john" when="2024-04-09T15:06:55.52Z" type="text-version" status="1.0.11" xml:id="UT22084-066-017-307">
                     <desc>Capitalized "without" in title</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-05-29T07:21:20.756Z" type="text-version" status="1.0.12" xml:id="UT22084-066-017-308">
+                    <desc>updated pending links.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -349,8 +352,8 @@
                   Questions</title> (<title xml:lang="Sa-Ltn">
                                 <ref target="http://read.84000.co/translation/toh81.html">Siṃhaparipṛcchāsūtra</ref>
                             </title>, Toh 81), and <title xml:lang="en">The Sūtra of Advice for the
-                    King</title> (<title xml:lang="Sa-Ltn">Rājādeśasūtra</title>, <ref rend="pending" target="http://read.84000.co/translation/toh214.html">Toh 214</ref>,
-                <ref rend="pending" target="http://read.84000.co/translation/toh215.html">215</ref>). <title xml:lang="en">Cluster
+                    King</title> (<title xml:lang="Sa-Ltn">Rājādeśasūtra</title>, <ref target="http://read.84000.co/translation/toh214.html">Toh 214</ref>,
+                <ref target="http://read.84000.co/translation/toh215.html">215</ref>). <title xml:lang="en">Cluster
                 of Scriptures</title>, pp. 203-204.</note> The fifteenth-century Tibetan scholar
             Pekar Sangpo<note place="end" xml:id="UT22084-066-017-23"> For the dates of this
               scholar, see van der Kuijp 2009, pp. 8–9.</note> groups this text under “Sūtras
