--- a/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
+++ b/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-043-011-33">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-043-011"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +92,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-21T10:02:55.722Z" type="text-version" status="0.0.11" xml:id="UT22084-043-011-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-29T07:43:49.305Z" type="translation-status" status="2.a" xml:id="UT22084-043-011-37">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-29T07:43:49.305Z" type="text-version" status="0.0.12" xml:id="UT22084-043-011-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
