--- a/translations/kangyur/translations/072-029_toh329-the_devata_sutra.xml
+++ b/translations/kangyur/translations/072-029_toh329-the_devata_sutra.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-029-233">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.56 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -172,6 +172,9 @@
                 <change who="#konchog" when="2024-05-27T22:21:56.673Z" type="text-version" status="1.0.5" xml:id="UT22084-072-029-242">
                     <desc>Several fixes in the main translation.</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-05-29T12:55:04.251Z" type="text-version" status="1.0.56" xml:id="UT22084-072-029-245">
+                    <desc>updated pending links.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -282,7 +285,10 @@
                                                 the great translator Yeshé Dé has been suggested,
                                                 based on the listing in Butön’s <title xml:lang="en">History of Buddhism</title>. However, that
                                                 citation may just refers to <title xml:lang="en">The Shorter Devatā Sūtra
-                                                        (</title>Toh 330),<ref inst="untoggle comment on following note" rend="pending" target="http://read.84000.co/translation/toh330.html"/><!--<note xml:id="" place="end">Sakya Pandita Translation Team, trans. <title xml:lang="en"><ref target="http://read.84000.co/translation/toh330.html">The Devatā Sūtra</ref></title>, Toh 330 (84000: Translating the Words of the Buddha, 2023).</note>--> which immediately follows it in Kangyur
+                                                        (</title>Toh 330),<note place="end" xml:id="UT22084-072-029-243">
+                            <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh330.html">The Shorter Devatā Sūtra</ref>
+                            </title> (translated 2023).</note> which immediately follows it in Kangyur
                                                   collections.<note place="end" xml:id="UT22084-072-029-67">
                                                   <title xml:lang="en">The Shorter Devatā Sūtra
                                                   </title> carries a colophon attributing the
@@ -876,6 +882,11 @@
                                 </div>
                                 <div type="section" xml:id="UT22084-072-029-listBibl-4">
                                         <head type="section" tid="93">Other Sources</head>
+                                        <bibl xml:id="UT22084-072-029-244">84000. <title xml:lang="en">
+                            <ref target="http://read.84000.co/translation/toh330.html">The Shorter Devatā Sūtra</ref>
+                        </title> 
+                                                (<title xml:lang="Sa-Ltn">Alpadevatāsūtra</title>, <title xml:lang="Bo-Ltn">lha’i mdo nyung ngu</title>, Toh 330).
+                                                Translated by Pema Yeshé Dé Translation Team. Online publication, 84000: Translating the Words of the Buddha, 2023.</bibl>
                                         <bibl xml:id="UT22084-072-029-219">Bhikkhu Bodhi trans. <title xml:lang="en">The Numerical Discourses of the
                                                 Buddha: A Translation of the Aṅguttara
                                                 Nikāya</title>, Boston: Wisdom Publications, 2012.</bibl>
