--- a/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
+++ b/translations/kangyur/translations/061-006_toh186_miracle_of_attaining_the_buddhas_powers.xml
@@ -26,7 +26,7 @@
                 <consultant role="projectManager" xml:id="UT22084-061-006-306">Gregory Forgues</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.33.33 <date>2024</date>
+                <edition>v 1.33.34 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -185,6 +185,9 @@
                 </change>
                 <change who="#celso" when="2024-04-30T11:40:32.457Z" type="text-version" status="1.33.33" xml:id="UT22084-061-006-356">
                     <desc>Activated pending links</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-05-29T12:58:17.484Z" type="text-version" status="1.33.34" xml:id="UT22084-061-006-359">
+                    <desc>updated pending links.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -392,7 +395,9 @@
                                 <ref target="https://read.84000.co/translation/toh287.html">The Application of Mindfulness of the Sacred Dharma</ref>
                             </title>, Toh 287 (2021).</note>
                         <title xml:lang="Bo-Ltn">mdzangs blun</title> (Toh 341)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh341.html"/>, and <title xml:lang="Sa-Ltn">Sumāgadhāvadāna</title> (Toh
-                            346)<ref inst="add_note_and_bibl" rend="pending" target="https://read.84000.co/translation/toh346.html"/>. </p>
+                        346).<note place="end" xml:id="UT22084-061-006-357">See Venerable Khenpo Kalsang Gyaltsen and Chodrungma Kunga Chodron, trans., <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh346.html">The Exemplary Tale of Sumāgadhā</ref>
+                        </title>, Toh 246 (2024).</note> </p>
                     <p tid="15">In addition, the pure realm of Sukhāvatī is mentioned in the text, as are some names of tathāgatas and of a specific
                         samādhi also found in the <title xml:lang="Sa-Ltn">Buddhāvataṃsaka</title>. </p>
                 </div>
@@ -1356,6 +1361,11 @@
                         </ref>
                         </title> 
                         (Toh 47). 84000: Translating the Words of the Buddha, 2023.</bibl>
+                    <bibl xml:id="UT22084-061-006-358">Kalsang Gyaltsen, Venerable Khenpo and Chodrungma Kunga Chodron, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh346.html">The Exemplary Tale of Sumāgadhā</ref>
+                        </title> 
+                        (<title xml:lang="Sa-Ltn">Sumāga­dhāvadāna</title>, Toh 346). 84000: Translating the Words of
+                        the Buddha, 2024.</bibl>
                     <bibl xml:id="UT22084-061-006-350">Kīrtimukha Translation Group, trans. <title xml:lang="en">
                         <ref target="https://read.84000.co/translation/toh65.html">The Prophecy for Bhadra the Illusionist</ref>
                     </title> (<title xml:lang="Sa-Ltn">Bhadra­māyākara­vyākaraṇa­sūtra</title>, Toh 65). 84000: Translating the Words of the
